# python-modules

./: .gitignore  notes.md
aoc_2024/: README.md
aoc_2024/day02/: d02.py
aoc_2024/day03/: d03.py
aoc_2024/day04/: d04.py
aoc_2024/day05/: d05.py
aoc_2024/day06/: d06.py
aoc_2024/day07/: d07.py
aoc_2024/day08/: d08.py  input_14.txt  input_d08.txt
aoc_2024/day09/: d09.py  out
aoc_2024/day10/: d10.py
aoc_2024/day13/: d13.py
aoc_2024/day14/: d14.py
aoc_2024/day16/: d16.py
blockchain/: README.md  block.py  chain.py  main.py
cybersec-web/00-submit/: requirements.txt  scorpion.py  spider.py
cybersec-web/00_scorpion/: README.md  binImg  binimage  gui_scorpion.py  main.py  marker_jpg.txt  scorpion.py  scrp.py
cybersec-web/00_spider/: Makefile  README.md  main.py  photo-1561037404-61cd46aa615b?h=500  requirements.txt  (+2 more)
django/: notes.md
langchain_chat/: 01_document_loading.py  02_document_splitting.py  README.md  linter.sh  pyproject.toml  requirements.txt
python_0/: 00_hello.py  01_format_ft_time.py  06_filterstring.py  find_ft_type.py  ft_filter.py  readme.md  test_loading-08.py
python_0_starting/: 02_tester.py  04_whatis.py  05_building.py  07_sos.py  Loading.py  ft_filter.py  test_loading-08.py
python_0_starting/ex09-package-creation/: pyproject.toml
python_1/: 00_give_bmi.py  02_load_image.py  notes  notes.md
python_1_array/: 01_array2D.py  03_zoom.py
python_2/: README.md  _00_load_csv.py  _01_aff_life.py  output.txt
python_3/: _00_S1E9.py  _00_tester.py  _01_S1E7.py  _01_tester.py
python_3_oop/: _00_tester.py  _01_tester.py
(+19 files in other folders)
