# Project metadata and setup information

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.txt"
license = { text = "MIT" }
authors = [
    { name = "eagle", email = "eagle@42.fr" }
]
homepage = "https://github.com/eagle/ft_package"

# Optional, adding extra metadata
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/eagle/ft_package"
